# cellpose-workflow

./: .envrc  cuda-test.py  detection_plots.py  flake.nix  main.py  properties_table.py  pyproject.toml
