[project]
name = "cellpose-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cellpose[gui]>=4.0.8",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "rich>=14.3.2",
    "scikit-image>=0.25.2",
    "six>=1.17.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.14",
]
